# secret-hitler-sim

./: .gitignore  README.md  game_rules.md  index.html  old_visualization.html  pyproject.toml  v2.html  v3.html  visualization.html
data/: visualization.html
scripts/: game_stats.py  screenshot.py  verify_visualization.py
src/policy_game/: __init__.py  constants.py  core.py  generator.py  simulation.py
tests/: test_core.py  test_simulation.py  test_visualization_contract.py
